codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: tui/src/pager_overlay.rs
expression: snapshot
---
 ┃ • Added foo.txt (+2 -0)                                                     █
 ┃     1 +hello                                                                █
 ┃     2 +world                                                                █
┌                                                                             ┐█
│┃ • Added foo.txt (+2 -0)                                                    │█
│┃     1 +hello                                                               │█
│┃     2 +world                                                               │█
└                                                                             ┘│
   ✔ You approved codex to run ls this time                                    │
 ↑/↓ to select   pgup/pgdn to page   home/end to jump
 q to quit   esc to edit prev   ←/→ to fold   e to toggle   enter to open
