codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_reasoning_mouse_expand.snap
---
source: tui/src/pager_overlay.rs
expression: "buffer_to_text(&expanded, area)"
---
│┃ ◆ Thought                                                                  │
│┃                                                                            │
│┃   Checked the source.                                                      │
│┃                                                                            │
│┃   Found the pointer routing gap.                                           │
└                                                                             ┘



 ↑/↓ to select   pgup/pgdn to page   home/end to jump
 q to quit   esc to edit prev   ←/→ to fold   e to toggle   enter to open
